Better cowsay Demo

--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,6 +1,6 @@
-<h1>99procol Portal</h1>
+<h1>Project and Colaboration</h1>
 
 <p>
-  <%= Cowsay.say("Welcome to your procol!")%>
+  <%= Cowsay.say("Welcome !")%>
 </p>
 
