--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>procol</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <title><%= title %></title>
+	<%= csrf_meta_tag %>
+	<!--[if lt IE 9]>
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+  
+	<%= stylesheet_link_tag    'blueprint/screen', media: 'screen' %>
+	<%= stylesheet_link_tag    'blueprint/print', media: 'print' %>
+	<!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
+	<%= stylesheet_link_tag    'custom', media: 'screen' %>
+  
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+    <header>
+      <%= image_tag("logo.png", :alt => "Project-Collaboration", :class => "round") %>
+      <nav class="round">
+        <ul>
+          <li><%= link_to "Home",'#' %></li>
+          <li><%= link_to "Help",'#' %></li>
+          <li><%= link_to "Sign In",'#' %></li>
+        </ul>
+    </header>
+    <section class="round">
+    	<%= yield %>
+    </section>
+  </div>
 </body>
 </html>
