--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1><%= title %></h1>
 
 <p>
-  <%= Cowsay.say("Welcome !")%>
+  <%= Cowsay.say("Hello !")%>
 </p>
 <%= link_to "Sign up now!", signup_path, :class => "signup_button round"%>
 
