--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <!-- user_data = JSON.parse(@user.body) 
 user_data["name"] -->
-<h1><%= @userdata["name"] %></h1>
+<h1>Welcome, <%= @userdata["name"] %></h1>
 <p>At least it is working!
     <%= @userresponse.code   %></p>
