--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,6 @@
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Sign In",signin_path %></li>
+      <li><%= link_to "Sign In", new_session_path %></li>
     </ul>
 </header>
