--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,8 +1,13 @@
 <h1><%= title %></h1>
 <%= form_tag(userssignup_path, :method => 'post', :multipart => true) do %>
+ <!-- render 'shared/error_messages.html.erb'//-->
   <div class="field">
     <%= label_tag 'name'%><br>
     <%= text_field_tag 'name' %><br>
+  </div>
+  <div class="field">
+    <%= label_tag 'firstname'%><br>
+    <%= text_field_tag 'firstname' %><br>
   </div>
   <div class="field">
     <%= label_tag 'email'%><br>
@@ -17,7 +22,7 @@
     <%= password_field_tag 'password' %><br>
   </div>
   <div class="field">
-    <%= label_tag 'password confirmation'%><br>
+    <%= label_tag 'confirmation'%><br>
     <%= password_field_tag 'password_confirmation' %><br>
   </div>
   <div class="actions">
