--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <!-- user_data = JSON.parse(@user.body) 
 user_data["name"] -->
-<h1>Welcome, <%= @userdata["name"] %></h1>
-<p>At least it is working!
-    <%= @userresponse.code   %></p>
+<h1>Welcome, <%= @user.firstname %></h1>
+<p><%= @user.to_s %></p>
