--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -155,3 +155,14 @@ div.field div.actions y{
   font-size: 12px;
   list-style: square;
 }
+
+.alert {
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+
+.notice {
+  background-color: #eee;
+  text-align: center;
+}
