--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,15 @@
 <!-- user_data = JSON.parse(@user.body) 
 user_data["name"] -->
-<h1>Welcome, <%= @user.firstname %></h1>
-<p><%= @user.to_s %></p>
+<h1>Welcome, <%= @user.firstname %>!</h1>
+<p>Choose wise which features you want to use</p>
+<p><%= form_tag(usersnavigation_path, :method => 'post') do %>
+  <div class="field">
+    <%= label_tag('navigation')%>
+    <%= select_tag(:navigation_id, options_for_select([['Project',1],['Collaboration',2]]))%>
+  </div>  
+  <div>
+  <%= submit_tag('Choose')%>    
+  </div>
+  
+<% end %>  
+</p>
