user profile and navigation handling resumed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,11 @@
 user_data["name"] -->
 <h1>Welcome, <%= @user.firstname %>!</h1>
 <p>Choose wise which features you want to use</p>
-<p><%= form_tag(usersnavigation_path, :method => 'post') do %>
+<p><%= form_tag(usersprofile_path, :method => 'post') do %>
   <div class="field">
     <%= label_tag('navigation')%>
     <%= select_tag(:navigation_id, options_for_select([['Project',1],['Collaboration',2]]))%>
+    <%= hidden_field_tag(:user_id, @user.id)%>
   </div>  
   <div>
   <%= submit_tag('Choose')%>    
