--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,7 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Help", help_path %></li>
       <% if signed_in? %>
+      <li><%= link_to "Profile", showuser_path(current_user.id)%></li>
       <li><%= link_to "Sign out", signout_path %></li>
       <% else %>
       <li><%= link_to "Sign in", signin_path %></li>
