--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to your profile.
+<h1>Welcome to your profile!</h1>
 <% if signed_in? %>
   <% if !current_user.nil? %>
       <% if !current_user.navigation.nil?%>
@@ -12,3 +12,4 @@
 <%else%>
   <li>Demo</li>
 <% end %>
+<%= render 'users/profile' %>
