micropost handling improved, just finish it soon.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 <body>
   <div class="container">
     <%= render 'layouts/header' %>
+    <br><br>
+    <% if !current_user.nil? %>
+      <%= render 'layouts/user_header'%>
+    <% end %>
     <br>
     <section class="round">
       <% flash.each do |key,value| %>
