--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,20 @@
 <h1><%= title %></h1>
 
 <p>
-  <%= Cowsay.say("Hello !")%>
+  <% if signed_in? %>
+    <table class="front" summary="For signed in users">
+      <tr>
+        <td class="main">
+          <h1 class="micropost">What's up?</h1>
+          <%= render 'shared/micropost_form'%>
+        </td>
+      </tr>
+    </table>
+  <% else %>
+    <%= Cowsay.say("Hello !")%>
+    <%= link_to "Sign up now!", signup_path, :class => "signup_button round"%>
+  <%end%>
 </p>
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round"%>
+
+
 
